--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
 </head>
 
 //delighterを使ってスクロールした時にfadeさせることができる
-手順１、下記のようにdelighters.jsをダウンロードしてパス通りのフォルダ内に入れる
-手順２、cssに記述
+//手順１、下記のようにdelighters.jsをダウンロードしてパス通りのフォルダ内に入れる
+//手順２、cssに記述
 //ex ↓
 <div class="col-md-6 pf-image" data-delighter>
 				<img src="img/profile.jpg" width="300" height="400">
 			</div>
 //----
+	  
+//wow.jsとanimate.cssを使ってアニメーションを作る
+//https://qiita.com/tiwu_official/items/989834406c25deccee8b
+
+	  
 
 
 
